Test/IDNA_config/IDNA-config/cst-partymaster-transformer-springboot-confluent/target/classes/META-INF/fabric8/openshift/cst-partymaster-transformer-springboot-confluent-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/git-commit: d7b75bd44fa7c72cb441a56292f68d7f529f844c
    fabric8.io/git-branch: cache_schema_change
    fabric8.io/git-url: http://F5177014@idna-bitbucket.fnb.co.za/scm/ieeh/cst-partymaster-transformer-springboot-confluent.git
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/cst-partymaster-transformer-springboot-confluent
    fabric8.io/scm-tag: HEAD
  labels:
    app: cst-partymaster-transformer-springboot-confluent
    provider: fabric8
    version: "1.0"
    group: za.co.fnb
  name: cst-partymaster-transformer-springboot-confluent
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: cst-partymaster-transformer-springboot-confluent
